# DAQ_transactor_new_Mekhala

./: CMakeLists.txt  DAQ_status_and_features  Makefile  README.md  test_HC1_1.sh
data/: README.md
firmware/is_using_on_SD_card/: tileboard-tester-v2p0-ROCv3.develop-2024_01_06_20_39_00.52c4c216.noarch.rpm
firmware/old/: tileboard-tester-v2p0-ROCv3.develop-2023_04_13_23_30_38.066a7ae5.noarch.rpm  tileboard-tester-v2p0-bugfix_transactor_addresses-2023_12_04_21_39_40.660a024d.noarch.rpm  tileboard-tester-v2p0-test_SCAtimeout_transcator-2023_11_22_16_13_59.52a73882.noarch.rpm  tileboard-tester-v2p0-test_SCAtimeout_transcator-2023_11_23_12_17_00.3dbafa91.noarch.rpm  tileboard-tester-v2p0-test_SCAtimeout_transcator-2023_11_27_17_19_24.42d9b0a9.noarch.rpm
firmware/xml_files/uHAL_xml/: fw_block_addresses.xml  fw_block_addresses_edited.xml
guideline/: TB_Tester_V3_guideline_transactor.txt  TB_Tester_V3_guideline_transactor_backup.txt
hexactrl_sw/: requirements.txt  webserver.py  website.tpl
hexactrl_sw/address_table/: address_hgcrocctrl.xml  buildXML.py  connection.xml
hexactrl_sw/address_table/modules/: axi_bram_ctrl.xml  axi_bram_ctrl_channel.xml  fastcontrol_axi.xml  link_capture_axi.xml  self_trigger.xml
hexactrl_sw/debug_tools/: acquiring.py  align_link.py  aquire_l1a.py  check_alignment.py  fcmd.py  findOffsets.py  injection.py  mars_summary.py  modif_bram.py  mylittleancillary.py  self_trig.py  self_trig.py-tmp
hexactrl_sw/hexactrl_script/: G8_hit_positions.csv  LED_scan_MODTEST.py  LED_scan_testbeam.py  LED_scan_testbeam_multiconfig.py  TB3_SlowControl.py  TB3_SlowControl_6V.py  TB3_SlowControl_B12_mat.py  TB3_SlowControl_mathias.py  TableController.py  TestBeamDAQ_March2023.py  TestBeamDAQ_multirun_March2023.sh  TestBeam_LEDscan_March2023.py  beam_run_Aug2023.py  beam_run_May2023_multiConvGain.py  beam_run_May2023_multiConvGain_confOnlyOnce.py  beam_run_remote_May2024.py  beam_run_test_April2024.py  beam_run_test_May2024.py  beam_run_with_moving_Aug2023.py  beam_run_with_moving_May2023.py  configGenerator.py  dataPd.csv  delay_scan.py  findPedestalAlignment.py  hit_positions.csv  hit_positions_A5_25p.csv  hit_positions_D8_100p.csv  hit_positions_D8_50p.csv  hit_positions_E8_100p.csv  hit_positions_E8_25p.csv  hit_positions_from_12.csv  hit_positions_from_22.csv  hit_positions_from_52.csv  hit_positions_from_66.csv  hit_positions_masked.csv  hit_positions_showers.csv  hit_positions_timingtestsMIP.csv  hit_positions_timingtestsMIP_temp.csv  inCtest_run.py  injection_run.py  (+57 more)
hexactrl_sw/hexactrl_script/PreampInjection_scan_1/: initial_full_config.yaml
hexactrl_sw/hexactrl_script/analysis/: CMakeLists.txt  README.md
hexactrl_sw/hgcal-tester-script/: slow_control.py  zmq_controller.py
hexactrl_sw/services/: daq-client.service.in  daq-server.service.in  i2c-server.service.in  post.sh.in  postun.sh.in  preun.sh.in
hexactrl_sw/zmq_i2c/: Board_swamp.py  Board_swamp_B12.py  Boards.py  CMakeLists.txt  Link.py  Translator.py  create_yaml_from_pickle.py  example_swamp_roc_configuration.py  tbtester_setup_original.py  zmq_server.py
hexactrl_sw/zmq_i2c.to_remove/: Boards.py  Boards_backup_Oct23.py  Link.py  Link_1ROC_Sept23.py  Link_original.py  Translator.py  configure.py  zmq_server.py
hexactrl_sw/zmq_i2c.to_remove/gbt-sca-sw/: CMakeLists.txt  README.md  env.sh  sca.i  sca_swig_test.py
hexactrl_sw/zmq_i2c.to_remove/gbt-sca-sw/address_table/: connection.xml  connection_old.xml  gbtsca.xml
hexactrl_sw/zmq_i2c.to_remove/gbt-sca-sw/address_table/modules/: GBT_SCA.xml  GBT_SCA_axi_gpio.xml  GBT_SCA_rx.xml  axi_bram_ctrl_channel.xml  fastcontrol_axi.xml  link_capture_axi.xml  link_capture_axi_channel.xml
hexactrl_sw/zmq_i2c.to_remove/gbt-sca-sw/python/: gbtsca.py  gbtsca_bus.py  gbtsca_resethelper.py  gbtsca_rxhelper.py  gbtsca_txhelper.py  generic_iic.py
hexactrl_sw/zmq_i2c.to_remove/gbt-sca-sw/sources/main/include/: gbtsca.h  gbtsca_exception.h  gbtsca_rxhelper.h
hexactrl_sw/zmq_i2c.to_remove/gbt-sca-sw/sources/main/src/: gbtsca.cc  gbtsca_exception.cc  gbtsca_rxhelper.cc
hexactrl_sw/zmq_i2c/configs/: calibdac_meas.yaml  config_injectionscan_highrange.yaml  config_pedscan.yaml  init_pedscan.yaml  scan.yaml  scan_adc_dc1.yaml  scan_adc_dc2.yaml  scan_pedDAC_results.yaml  scan_phase.yaml  scan_vrefinv.yaml
hexactrl_sw/zmq_i2c/gbt-sca-sw/: gbtsca_bus_test.py
hexactrl_sw/zmq_i2c/gbt-sca-sw/address_table/: fw_block_addresses.xml
hexactrl_sw/zmq_i2c/gbt-sca-sw/address_table/modules/: GBT_SCA_tx.xml  axi_bram_ctrl.xml  fastcontrol_recv_axi.xml
hexactrl_sw/zmq_i2c/gbt-sca-sw/python/: gbtsca.py
hexactrl_sw/zmq_i2c/gbt-sca-sw/sources/main/executables/: gbtsca_test.cxx
hexactrl_sw/zmq_i2c/gbt-sca-sw/sources/main/include/: gbtsca_resethelper.h  gbtsca_txhelper.h
hexactrl_sw/zmq_i2c/gbt-sca-sw/sources/main/src/: gbtsca_txhelper.cc
hexactrl_sw/zmq_i2c/swamp/: ECON.py  README.md  SlowControl_Interface.py  cfgconverter.py  core.py  emp_interface.py  gbtsca.py  gbtsca_analog.py  gbtsca_constants.py  gbtsca_gpio.py  gbtsca_i2c.py  gbtsca_transport.py  lpgbt_adc.py  lpgbt_gpio.py  lpgbt_i2c.py  lpgbt_ic.py  lpgbt_ic_emp.py  pt1000.py  requirements.txt  roc.py  sc_lpgbt.py  sc_transactor_interface.py  transactorDecoding.py  transactorEncoding.py  util.py  vtrx.py
hexactrl_sw/zmq_i2c/swamp/configs/: V3LDHexaboard-poweron-default.yaml  econd_test_config.yaml  econt_test_config.yaml  init_roc.yaml  injection.yaml  lpgbt_map.pickle  setup_clocks_lpgbt.yaml  setup_daq_lpgbt.yaml  setup_inputs_daq_lpgbt.yaml  setup_inputs_trg_lpgbt_B.yaml  setup_inputs_trg_lpgbt_C.yaml  setup_outputs.yaml  setup_trg_lpgbt_B.yaml  setup_trg_lpgbt_C.yaml  setup_unicorn_econd.yaml  si_hgcroc_map.pickle
hexactrl_sw/zmq_i2c/swamp/regmaps/: ECOND_I2C_params_regmap.csv  ECOND_I2C_params_regmap.json  ECOND_I2C_params_regmap.yaml  ECONT_I2C_params_regmap.csv  ECONT_I2C_params_regmap.json  ECONT_I2C_params_regmap.yaml  make_defaultmap.py  make_regmap_ECOND.py  make_regmap_ECONT.py
hexactrl_sw/zmq_i2c/swamp/regmaps/econ/: ECOND_P1_maps.csv  ECOND_P1_regs.csv  ECONT_P1_regmap.yaml
(+310 files in other folders)
